# onchain-analytics

./: .editorconfig  .env.test  .gitignore  .prettierrc.yml  .sqlfluff  .sqlfluffignore  CLAUDE.md  LICENSE.md  README.md  justfile  poetry.toml  pyproject.toml  queries.yml
.claude/: settings.json  settings.local.json
.github/workflows/: push-to-dune.yml  push_to_dune.yml  (+1 more)
envio/: consolidate-users.py  constants.py  fetch-extra-users.py  fetch-revenues.py  fetch-streams.py  fetch-transactions.py  fetch-users.py  helpers.py
queries/: airdrops:_claim_count___4719750.sql  airdrops:_claim_data___4719719.sql  airdrops:_claim_revenues___4907530.sql  airdrops:_daily_claim_count___4719780.sql  airdrops:_daily_instant_claims___4983566.sql  airdrops:_daily_number_of_clai___5223843.sql  airdrops:_number_of_created_ca___5223926.sql  flow:_adjusted_remaining_balan___4724366.sql  flow:_chain_usage_distribution___4646303.sql  flow:_cumulative_stablecoin_vo___4606974.sql  flow:_cumulative_stablecoin_vo___4650009.sql  flow:_cumulative_stablecoin_volume___4606974.sql  flow:_deposit_data___4606918.sql  flow:_grouped_deposit_data___4724335.sql  flow:_grouped_withdrawal_data___4724337.sql  flow:_median_stablecoin_deposi___4607199.sql  flow:_median_stablecoin_deposit___4607199.sql  flow:_monthly_cumulative_stabl___4650041.sql  flow:_monthly_stablecoin_volum___4614039.sql  flow:_monthly_stream_creation___4607341.sql  flow:_monthly_stream_creation___4607933.sql  flow:_monthly_stream_creation____4607933.sql  flow:_most_used_stablecoins___4666321.sql  flow:_most_used_tokens___4613871.sql  flow:_number_of_created_stream___4646202.sql  flow:_priced_adjusted_remainin___4724379.sql  flow:_remaining_balances___4724354.sql  flow:_share_of_stablecoin_stre___4646341.sql  flow:_stream_creation_count_(1___4607466.sql  flow:_stream_creation_count_(1___4607469.sql  flow:_stream_creation_count_(1___4607476.sql  flow:_stream_creation_count___4600798.sql  flow:_stream_creation_data___4596391.sql  flow:_total_value_locked_(tvl)___4724394.sql  flow:_total_value_locked_(tvl)___4724432.sql  flow:_total_value_locked_(tvl)___4724441.sql  flow:_unique_user_count___4601154.sql  flow:_weekly_stream_creation_c___4607938.sql  flow:_withdrawal_data___4724176.sql  flow:_yearly_stream_creation_c___4607952.sql  (+92 more)
scripts/: dune_config.py  lint_names.py  parse_queries.py  preview_query.py  pull_from_dune.py  push_to_dune.py  sync_names.py  update_query_names.py  upload_to_dune.py
(+71 files in other folders)
