[build-system]
    requires = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"

[tool.poetry]
    authors = ["Sablier Labs Ltd"]
    description = "Onchain analytics for the Sablier Protocol"
    license = "MIT"
    name = "onchain-analytics"
    packages = [{ include = "**/*.py" }]
    readme = "README.md"
    repository = "https://github.com/sablier-labs/onchain-analytics"
    version = "1.0.0"

[tool.poetry.dependencies]
    dune-client = "^1.7"
    pandas = "^2.2"
    python = "^3.12"
    python-dotenv = "^1.0"
    pyyaml = "^6.0"
    gql = { extras = ["requests"], version = "^3.5.3" }

[tool.poetry.group.dev.dependencies]
    colorama = "^0.4.6"
    ruff = "^0.11.5"
    sqlfluff = "^3.3.0"

[tool.ruff]
    exclude = [".git", ".venv"]
    line-length = 120
    target-version = "py312"
